style: Add a simple logo

--- a/src/app/styles/index.styl
+++ b/src/app/styles/index.styl
@@ -89,6 +89,10 @@ body {
   border-bottom: 1px solid #ccc
 }
 
+.basicotp-logo {
+  margin: 2rem;
+  width:  8rem;
+}
 
 h1 {
   font-weight: normal;
